[gd_scene load_steps=4 format=3 uid="uid://kwco715ga5g0"]

[ext_resource type="Script" path="res://Engine/Resources/Scenes/LargeCollectibleDisplay.gd" id="1_mhrok"]
[ext_resource type="PackedScene" uid="uid://dppdeqskdv8hc" path="res://Engine/Resources/Scenes/CollectibleDisplay.tscn" id="2_iebip"]
[ext_resource type="PackedScene" uid="uid://d3fpf8gbjxsbx" path="res://Engine/Resources/Scenes/CoinValue.tscn" id="3_milrp"]

[node name="LargeCollectibleDisplay" type="MarginContainer"]
script = ExtResource("1_mhrok")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -3

[node name="CollectibleContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(22, 22)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CollectibleContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CollectibleContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.545098, 0.545098, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CollectibleContainer/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CollectibleDisplay" parent="VBoxContainer/CollectibleContainer" instance=ExtResource("2_iebip")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CoinValue" parent="VBoxContainer" instance=ExtResource("3_milrp")]
unique_name_in_owner = true
visible = false
layout_mode = 2
coin_value = 10

[connection signal="interacted" from="VBoxContainer/CollectibleContainer/CollectibleDisplay" to="." method="_on_collectible_display_interacted"]
